union de partials del headerMain y headerSidebar en uno solo

--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -5,12 +5,9 @@
 <%- include('partials/headLinks') %>
 
 <body>
-    <!-- Header: Navs TopHeader y Subheader -->
-     <!-- Header -->
-     <%- include('partials/headerMain') %>
-      <!-- Sidebar Nav -->
-        <%- include('partials/headerSidebar') %>
-
+     <!-- HeaderMain y headerSidebar -->
+     <%- include('partials/header') %>
+      
     <!-- Main: Secciones Resumen Cart - Codigo Descuento y Total -->
     <main>
         <section class="resumen-cart-productos">
