--- a/src/views/detalle-producto.ejs
+++ b/src/views/detalle-producto.ejs
@@ -7,11 +7,9 @@
     
 
 <body>
-    <!-- headerMain -->
-    <%- include('partials/headerMain') %>
+    <!-- headerMain y headerSidebar-->
+    <%- include('partials/header') %>
 
-        <!-- headerSidebar Nav -->
-        <%- include('partials/headerSidebar') %>
 
     <!-- Main -->
 
