--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,11 +6,8 @@
 
 <body>
 <!-- headers -->
-    <!-- headerMain -->
-    <%- include('partials/headerMain') %>
-
-    <!-- headerSidebar Nav -->
-     <%- include('partials/headerSidebar') %>
+    <!-- headerMain y headerSideBar -->
+    <%- include('partials/header') %>
 
 
 <!-- Main -->
