--- a/src/views/inicia-sesion.ejs
+++ b/src/views/inicia-sesion.ejs
@@ -5,15 +5,11 @@
 
 <%- include('partials/headLinks') %>
 
-<!------------------------------ UNIR LOS HEADERS!! EN UN SOLO PARTIAL----------------------  -->
 
     <body>
-        <!-- headerMain -->
-        <%- include('partials/headerMain') %>
-
-            <!-- headerSidebar Nav -->
-            <%- include('partials/headerSidebar') %>
-
+        <!-- headerMain y headerSidebar -->
+        <%- include('partials/header') %>
+        
                 <main>
 
                     <div class="boton-volver-home">
