--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -7,11 +7,8 @@
 
     <body>
         <!-- headers -->
-        <!-- headerMain -->
-        <%- include('partials/headerMain') %>
-
-            <!-- headerSidebar Nav -->
-            <%- include('partials/headerSidebar') %>
+        <!-- headerMain y headerSidebar -->
+        <%- include('partials/header') %>
 
 
                 <main>
