--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,10 +1,28 @@
+<style type="text/css">
+  a:link,
+  a:visited,
+  a:active {
+      text-decoration: none;
+  }
+</style>
+
+
 <header>
     <section class="topheader">
         <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
         <div class="vacio"></div>
         <div class="logo"><a href="/"><img class="logo-alojamascotas" src="/img/group.svg"
                     alt="logo de la empresa"></a></div>
-        <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
+ <!-- PROBANDO -->
+                    <form action="search" method="GET">
+                      <div class="button-search">
+                      <input type="text" name="search" placeholder="Buscar guardería">
+                      <button type="submit"> <i class="fas fa-search"></i></div>
+                  
+                      </button>
+                  </form>
+
+         <!-- <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>-->
         <div class="icon-cart"><a href="/productos/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
     </section>
     <section class="subheader">
