correcion, saque la fecha del nombre

--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -31,7 +31,7 @@
 
                             <div>
                                 <label>Nombre:</label>
-                                <input type="date" name="Nombre" required>
+                                <input type="text" name="Nombre" required>
                             </div>
 
                             <div>
