correcion de type foto

--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -30,11 +30,6 @@
                             </div>
 
                             <div>
-                                <label>Nombre:</label>
-                                <input type="text" name="Nombre" required>
-                            </div>
-
-                            <div>
                                 <label>Caracteristicas:</label>
                                 <input type="text" name="Caracteristicas" required>
                             </div>
@@ -47,7 +42,7 @@
 
                             <div>
                                 <label>Foto:</label>
-                                <input type="foto" name="Foto" required>
+                                <input type="file" name="Foto" required>
                             </div>
 
                             <div>
