correcion del type file

--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -25,13 +25,13 @@
 
 
                             <div>
-                                <label>Nombre de Guarderia:</label>
-                                <input type="text" name="Nombre de guarderia" required>
+                                <label>Nombre de la Guarderia:</label>
+                                <input type="text" name="Nombre de la guarderia" required>
                             </div>
 
                             <div>
-                                <label>Caracteristicas:</label>
-                                <input type="text" name="Caracteristicas" required>
+                                <label>Características:</label>
+                                <input type="text" name="Características" required>
                             </div>
 
                             <div>
