--- a/src/views/editar-producto.ejs
+++ b/src/views/editar-producto.ejs
@@ -25,29 +25,24 @@
 
 
                             <div>
-                                <label>Nombre de Guarderia:</label>
-                                <input type="text" name="Nombre de guarderia" required>
+                                <label>Nombre de la Guarderia:</label>
+                                <input type="text" name="Nombre de la guarderia" required>
                             </div>
 
                             <div>
-                                <label>Nombre:</label>
-                                <input type="date" name="Nombre" required>
-                            </div>
-
-                            <div>
-                                <label>Caracteristicas:</label>
-                                <input type="text" name="Caracteristicas" required>
+                                <label>Características:</label>
+                                <input type="text" name="Características" required>
                             </div>
 
                             <div>
                                 <label>Instalaciones:</label>
                                 <input type="text" name="Instalaciones" required>
                             </div>
-
+                            
 
                             <div>
                                 <label>Foto:</label>
-                                <input type="foto" name="Foto" required>
+                                <input type="file" name="Foto" required>
                             </div>
 
                             <div>
