--- a/public/css/style-editar-producto.css
+++ b/public/css/style-editar-producto.css
@@ -76,7 +76,7 @@ form button {
   border-radius: 5px;
   width: 30px;
   height: 22px;
-  position: absolute;
+  position: relative;
 }
 
 .div-button{
