--- a/src/views/editar-producto.ejs
+++ b/src/views/editar-producto.ejs
@@ -21,7 +21,7 @@
                     <div class="contenedor-registro">
 
 
-                        <form action="/register" method="POST">
+                        <form action="/productos/editar-producto" method="POST">
 
 
                             <div>
@@ -38,26 +38,16 @@
                                 <label>Instalaciones:</label>
                                 <input type="text" name="Instalaciones" required>
                             </div>
-                            
+
 
                             <div>
                                 <label>Foto:</label>
                                 <input type="file" name="Foto" required>
                             </div>
 
-                            <div>
-                                <label>Contraseña:</label>
-                                <input name="password" type="password" value="" class="form-control"
-                                    id="elige contraseña" placeholder=" Elige tu contraseña">
-                            </div>
-
-                            <div class="div-confirmar-clave">
-                                <input name="password" type="password" value="" class="form-control"
-                                    id="confirmar contraseña" placeholder=" Confirma tu contraseña">
-                            </div>
 
                             <div class="div-button">
-                                <button type="submit">Enviar</button>
+                                <button type="submit">Editar</button>
 
                             </div>
 
