--- a/src/views/partials/headLinks.ejs
+++ b/src/views/partials/headLinks.ejs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/style-inicia-sesion.css">
     <link rel="stylesheet" href="/css/style-producto.css">
     <link rel="stylesheet" href="/css/style-registro.css">
+    <link rel="stylesheet" href="/css/style-crear-producto.css">
+    <link rel="stylesheet" href="/css/style-editar-producto.css">
 
     <!-- Links Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
