--- a/public/css/style-carritob.css
+++ b/public/css/style-carritob.css
@@ -53,17 +53,22 @@
             border-right: 2px solid rgba(201, 201, 201, 0.20);
             border-bottom: 2px solid rgba(201, 201, 201, 0.20);           
 }
+img{
+      display: block;
+      margin: 0px auto;
+     }
 
 .titulo-producto {
       padding: 10px 0;
       font-size: 14px;
       font-weight: bold;
-      color: var(--verde-oscuro)
+      color: var(--verde-oscuro);
+      text-align:center;
 }
 
 .descripcion-producto {
       font-size: 13px;
-      text-align: left;
+      text-align: center;
       color: var(--verde-oscuro)
 }
 
@@ -230,6 +235,7 @@
       display: flex;
       flex-direction: column;
       padding: 10px 10px 10px 10px;
+      margin-top:50px;
 }
 
 .subtotal, .impuestos-tasas,
