ruta detalle prodcuto

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -28,7 +28,7 @@
             <i class="fas fas-arrow fa-angle-left"></i><h4>Guarderia 1</h4><i class="fas fas-arrow fa-angle-right"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam molestias quos eum placeat
                 quibusdam explicabo autem debitis repellendus expedita?</p>
-            <div class="boton-reservar"><a href="/detalle-producto">RESERVAR</a></div>
+            <div class="boton-reservar"><a href="/productos/detalle-producto">RESERVAR</a></div>
         </section>
 
         <section class="sobre-nosotros">
