--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -21,7 +21,7 @@
                     <div class="contenedor-registro">
 
 
-                        <form action="/productos/crear-producto" method="POST" enctype="multipart/form-data">
+                        <form action="/productos" method="POST" enctype="multipart/form-data">
 
 
                             <div>
