--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -74,9 +74,9 @@
                         <form action="categoria" method="GET">
                             <label class="titulo-categoria">Categoría:</label>
                             <select class="opciones-categoria" name="categoria">
-                                <option value="cat1">Categoria 1</option>
-                                <option value="cat2" selected>Categoria 2</option>
-                                <option value="cat3">Categoria 3</option>
+                                <option value="cat1">Categoria 1-Perros</option>
+                                <option value="cat2" selected>Categoria 2-Gatos</option>
+                                <option value="cat3">Categoria 3-Perros y Gatos</option>
                             </select>
                         </form>
                     </div>
