--- a/src/views/editar-producto.ejs
+++ b/src/views/editar-producto.ejs
@@ -16,7 +16,7 @@
                     <div class="boton-volver-home">
                         <a href="/"><i class="far fa-arrow-alt-circle-left"></i> VOLVER</a>
                     </div>
-                    <h3 class="titulo-registro">CREA TU CUENTA</h3>
+                    <h3 class="titulo-registro">EDITAR PRODUCTO</h3>
 
                     <div class="contenedor-registro">
 
@@ -27,6 +27,11 @@
                             <div>
                                 <label>Nombre de la Guarderia:</label>
                                 <input type="text" name="nombre" required>
+                            </div>
+
+                            <div>
+                                <label>Precio:</label>
+                                <input type="number" name="precio" required>
                             </div>
 
                             <div>
