--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -46,15 +46,15 @@
 
                        <div>
                            <label>Categorías</label>
-                        <select>
-                            <option value="cat1">Categoria 1-Perros</option>
-                            <option value="cat2" selected>Categoria 2-Gatos</option>
-                            <option value="cat3">Categoria 3-Perros y Gatos</option>
+                        <select name="categoria">
+                            <option value="Canina">Categoria 1-Perros</option>
+                            <option value="Felina" selected>Categoria 2-Gatos</option>
+                            <option value="Canina y Felina">Categoria 3-Perros y Gatos</option>
                         </select>
                 </div>
                 <div>
                     <label>Foto:</label>
-                    <input type="file" name="imagen" required>
+                    <input type="file" name="imagen">
                 </div>
 
                 <div class="div-button">
