--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -3,8 +3,8 @@
 
 <!-- head  -->
 
-    <%- include('partials/headLinks') %> 
-    
+    <%- include('partials/headLinks') %>
+
 
 <body>
     <!-- headerMain y headerSidebar-->
@@ -14,36 +14,9 @@
     <!-- Main -->
 
     <main>
-
-        <div class="buscarPorNombre">
-            <label>Buscar por nombre:</label>
-            <input type="text" name="nombreGuarderia">
-        </div>
-
-        <section class="articulos">
-            <article class="articulo1">
-
-                <div class="container">
-                    <ul class="slider">
-                        <li id="slide1">
-                            <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
-                        <li id="slide2">
-                            <img src="/img/guarderia1_slideb.jpg" alt="guarderiab" class="imagen2">
-                        <li id="slide3">
-                            <img src="/img/guarderia1_slidec.jpg" alt="guarderiac" class="imagen2">
-                        </li>
-                    </ul>
-                </div>
-
-                <ul class="menu-articulo1">
-                    <li><a href="#slide1">1</a></li>
-                    <li><a href="#slide2">2</a></li>
-                    <li><a href="#slide3">3</a></li>
-                </ul>
-
-                <!-- <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> -->
-                <div class="nombre-guarderia">Guardería Wag Wag</div>
-                <div class="precios">$$$$</div>
+                <img src= "/img/<%= guarderia.imagen %> " alt="guarderia1" class="imagen1">
+                <div class="nombre-guarderia">Guarderia <%= guarderia.nombre %> </div>
+                <div class="precios">$<%= guarderia.precio %></div>
                 <div class="estrellas">
                     <i class="fas fa-star"></i> <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i><i class="fas fa-star"></i>
@@ -52,25 +25,10 @@
                 <div class="cuerpo-detalle">
 
                     <h3>Características</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet
-                        rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque
-                        cumque
-                        praesentium officia repudiandae?
-                        Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae
-                        nam
-                        consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae
-                        ullam
-                        culpa labore? Eos!
-                    </p>
+                    <p><%= guarderia.caracteristicas %> </p>
                     <h3>Instalaciones</h3>
-                    <p>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in
-                        nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad
-                        porro
-                        sunt, assumenda non explicabo quasi at.
-                        Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam
-                        reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis?
-                        Voluptatibus quae dolore culpa corporis quasi.
-                    </p>
+                    <p><%= guarderia.instalaciones %> </p>
+
                 </div>
 
                 <div class="reservar" strong>
@@ -79,7 +37,7 @@
                 </div>
 
                 <div class="editar-producto" strong>
-                    <a href="/productos/editar-producto">Editar producto</a></strong>
+                    <a href="/productos/editar-producto/<%= guarderia.id %>">Editar producto</a></strong>
                     <i class="fas fa-paw huellita-reserva"></i>
                 </div>
 
@@ -88,7 +46,7 @@
                     <i class="fas fa-paw huellita-reserva"></i>
                 </div>
 
- 
+
         </section>
 
         <div class="resumen-producto">
