--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,7 +14,7 @@
         <div class="logo"><a href="/"><img class="logo-alojamascotas" src="/img/group.svg"
                     alt="logo de la empresa"></a></div>
  <!-- PROBANDO -->
-                    <form action="search" method="GET">
+                    <form action="/search" method="GET">
                       <div class="button-search">
                       <input class="input-buscar-guarderia" type="text" name="search" placeholder="Buscar guardería">
                       <button class="boton-search" type="submit"> <i class="fas fa-search"></i>
