--- a/src/views/detalle-producto.ejs
+++ b/src/views/detalle-producto.ejs
@@ -50,7 +50,7 @@
                 <article class="articulo1">
 
 
-                    <img src= "/img/<%= guarderia.imagen %> " alt="guarderia1" class="imagen1">
+                    <img src= "/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1" class="imagen1">
                     <div class="nombre-guarderia">Guarderia <%= guarderia.nombre %> </div>
                     <div class="precios">$<%= guarderia.precio %></div>
                     <div class="estrellas">
