--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -24,11 +24,11 @@
 
         <section class="main-productos">
             <h3>NUESTRAS GUARDERIAS</h3>
-            <div class="guarderia-1"><img class="img-guarderia1" src="/img/guarderia_canina_1.jpg" alt="guarderia1"></div>
+            <div class="guarderia-1"><img class="img-guarderia1" src="/img/guarderias/guarderia_canina_1.jpg" alt="guarderia1"></div>
             <i class="fas fas-arrow fa-angle-left"></i><h4>Guarderia 1</h4><i class="fas fas-arrow fa-angle-right"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam molestias quos eum placeat
                 quibusdam explicabo autem debitis repellendus expedita?</p>
-            <div class="boton-reservar"><a href="/productos/detalle-producto">RESERVAR</a></div>
+            <div class="boton-reservar"><a href="/productos/productos">RESERVAR</a></div>
         </section>
 
         <section class="sobre-nosotros">
