--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -17,7 +17,7 @@
 
         <% productsToSearch.forEach(guarderia => { %>
 
-                <img src= "/img/<%= guarderia.imagen %> " alt="guarderia1" class="imagen1">
+                <img src= "/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1" class="imagen1">
                 <div class="nombre-guarderia">Guarderia <%= guarderia.nombre %> </div>
                 <div class="precios">$<%= guarderia.precio %></div>
                 <div class="estrellas">
