--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -38,7 +38,8 @@
     <div id="sidebarMenu">
       <ul class="sidebarMenuInner">
         <li><a href="/users/inicia-sesion">Mi Cuenta</a></li>
-        <li><a href="/productos/detalle-producto">Guarderias</a></li>
+        <li><a href="/productos/productos">Guarderias</a></li>
+        <li><a href="/productos/crear-producto">Crear Producto</a></li>
         <li><a href="/">Nosotros</a></li>
         <li><a href="#">Contacto</a></li>
         <li><a href="#">FAQ</a></li>
