--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -15,12 +15,14 @@
 
     <main>
 
+         <!--
+
         <div class="buscarPorNombre">
             <label>Buscar por nombre:</label>
             <input type="text" name="nombreGuarderia">
         </div>
 
-        <!--
+
 
                 <div class="container">
                     <ul class="slider">
@@ -50,7 +52,7 @@
                 <article class="articulo1">
 
 
-                    <img src= "/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1" class="imagen1">
+                    <img src= "/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1" class="imagenGuarderia">
                     <div class="nombre-guarderia">Guarderia <%= guarderia.nombre %> </div>
                     <div class="precios">$<%= guarderia.precio %></div>
                     <div class="estrellas">
