--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -37,7 +37,7 @@
   justify-content: space-evenly;
   align-items: flex-start;
   background-color: var(--celeste-claro);
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 
@@ -122,6 +122,10 @@ article {
   margin-bottom: 10px;
 }
 
+.imagenGuarderia{
+  width: 40%;
+}
+
 /* Slider article */
 
 .container {
@@ -159,7 +163,6 @@ h1 {
 
 div.cuerpo-detalle {
   padding: 20px;
-  width: fit-content;
   text-align: justify;
   background-color: var(--gris);
   border-radius: 10px;
