correccion boton reservar

--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -66,8 +66,8 @@ header {
 
 .icon-search {
   display: block;
-  width: 15%;
-  padding: 10 px;
+  width: 2%;
+  padding: 3 px;
 }
 
 .icon-search i {
@@ -125,7 +125,7 @@ header {
   border: none;
   border-radius: 5px;
   min-width: 5px;
-  max-width: 250px;
+  max-width: 150px;
   height: 22px;
 }
 
@@ -139,6 +139,7 @@ header {
   border-radius: 5px;
   width: 50px;
   height: 22px;
+  position: absolute;
 }
 
 /* Sidebar Nav */
