--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -3,6 +3,7 @@
 
  <!-- head-->
 <%- include('partials/headLinks') %>
+<link rel="stylesheet" href="/css/style-carritob.css">
 
 <body>
      <!-- HeaderMain y headerSidebar -->
