--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -4,6 +4,7 @@
 <!-- head  -->
 
 <%- include('partials/headLinks') %>
+<link rel="stylesheet" href="/css/style-crear-producto.css">
 
     <body>
         <!-- headers -->
