--- a/src/views/inicia-sesion.ejs
+++ b/src/views/inicia-sesion.ejs
@@ -5,11 +5,13 @@
 
 <%- include('partials/headLinks') %>
 
+<link rel="stylesheet" href="/css/style-inicia-sesion.css">
+
 
     <body>
         <!-- headerMain y headerSidebar -->
         <%- include('partials/header') %>
-        
+
                 <main>
 
                     <div class="boton-volver-home">
