--- a/src/views/detalle-producto.ejs
+++ b/src/views/detalle-producto.ejs
@@ -5,6 +5,8 @@
 
     <%- include('partials/headLinks') %>
 
+    <link rel="stylesheet" href="/css/style-producto.css">
+
 
 <body>
     <!-- headerMain y headerSidebar-->
