--- a/src/views/editar-producto.ejs
+++ b/src/views/editar-producto.ejs
@@ -5,6 +5,8 @@
 
 <%- include('partials/headLinks') %>
 
+<link rel="stylesheet" href="/css/style-editar-producto.css">
+
     <body>
         <!-- headers -->
         <!-- headerMain y headerSidebar -->
