boton editar y crear productos

--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -78,6 +78,17 @@
                         <i class="fas fa-paw huellita-reserva"></i>
                     </div>
 
+                    <div class="editar-producto" strong>
+                        <a href="/productos/editar-producto/<%= guarderia.id %>">Editar producto</a></strong>
+                        <i class="fas fa-paw huellita-reserva"></i>
+                    </div>
+
+                    <div class="crear-producto" strong>
+                        <a href="/productos/crear-producto">Crear Producto</a></strong>
+                        <i class="fas fa-paw huellita-reserva"></i>
+                    </div>
+
+
 
             </article>
 
