--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -53,8 +53,8 @@
 
                 <article class="articulo1">
 
-
-                    <img src= "/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1" class="imagenGuarderia">
+<p class="centrado">
+                    <img src= "/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1" class="imagenGuarderia"></p>
                     <div class="nombre-guarderia">Guarderia <%= guarderia.nombre %> </div>
                     <div class="precios">$<%= guarderia.precio %></div>
                     <div class="estrellas">
